force-app/main/default/objects/Account/fields/Self__c.field-meta.xml
<CustomField>
    <fullName>Self__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Self</label>
    <type>Checkbox</type>
</CustomField>