force-app/main/default/objects/Account/fields/SelfFound__c.field-meta.xml
<CustomField>
    <fullName>SelfFound__c</fullName>
    <label>Self-Found</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>HowDidYouFindUs__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Online search</fullName>
            </value>
            <value>
                <fullName>Social media</fullName>
            </value>
            <value>
                <fullName>Online directory</fullName>
            </value>
            <value>
                <fullName>Website</fullName>
            </value>
            <value>
                <fullName>Saw brochure/flyer</fullName>
            </value>
            <value>
                <fullName>Event</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>