force-app/main/default/objects/Account/fields/Send_Invoice_to_Client__c.field-meta.xml
<CustomField>
    <fullName>Send_Invoice_to_Client__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send Invoice to Client?</label>
    <type>Checkbox</type>
</CustomField>