force-app/main/default/objects/Account/fields/Senior_Living__c.field-meta.xml
<CustomField>
    <fullName>Senior_Living__c</fullName>
    <label>Senior Living</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>WhereDoesTheClientLive__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Senior_Living</valueSetName>
    </valueSet>
</CustomField>