force-app/main/default/objects/Account/fields/SSN__c.field-meta.xml
<CustomField>
    <fullName>SSN__c</fullName>
    <label>SSN</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>