force-app/main/default/objects/Account/fields/Timezone__c.field-meta.xml
<CustomField>
    <fullName>Timezone__c</fullName>
    <label>Timezone</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>US/Alaska</fullName>
            </value>
            <value>
                <fullName>US/Arizona</fullName>
            </value>
            <value>
                <fullName>US/Central</fullName>
            </value>
            <value>
                <fullName>US/Eastern</fullName>
            </value>
            <value>
                <fullName>US/Hawaii</fullName>
            </value>
            <value>
                <fullName>US/Mountain</fullName>
            </value>
            <value>
                <fullName>US/Pacific</fullName>
            </value>
            <value>
                <fullName>America/Puerto_Rico</fullName>
            </value>
            <value>
                <fullName>Australia/Melbourne</fullName>
            </value>
            <value>
                <fullName>Canada/Atlantic</fullName>
            </value>
            <value>
                <fullName>Canada/Central</fullName>
            </value>
            <value>
                <fullName>Canada/East-Saskatchewan</fullName>
            </value>
            <value>
                <fullName>Canada/Eastern</fullName>
            </value>
            <value>
                <fullName>Canada/Mountain</fullName>
            </value>
            <value>
                <fullName>Canada/Newfoundland</fullName>
            </value>
            <value>
                <fullName>Canada/Pacific</fullName>
            </value>
            <value>
                <fullName>Canada/Saskatchewan</fullName>
            </value>
            <value>
                <fullName>Canada/Yukon</fullName>
            </value>
            <value>
                <fullName>GMT</fullName>
            </value>
            <value>
                <fullName>WET</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>