force-app/main/default/objects/Account/fields/Types__c.field-meta.xml
<CustomField>
    <fullName>Types__c</fullName>
    <label>Types</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AAA</fullName>
            </value>
            <value>
                <fullName>Adult Day Care</fullName>
            </value>
            <value>
                <fullName>Advertising</fullName>
            </value>
            <value>
                <fullName>Affiliated Org. (Corp HQ, Peer Agency, etc)</fullName>
            </value>
            <value>
                <fullName>Assisted Living</fullName>
            </value>
            <value>
                <fullName>Caregivers</fullName>
            </value>
            <value>
                <fullName>CCRC</fullName>
            </value>
            <value>
                <fullName>Client</fullName>
            </value>
            <value>
                <fullName>Fiduciary</fullName>
            </value>
            <value>
                <fullName>Financial Advisor</fullName>
            </value>
            <value>
                <fullName>GCM</fullName>
            </value>
            <value>
                <fullName>Home Care Agency</fullName>
            </value>
            <value>
                <fullName>Home Healthcare</fullName>
            </value>
            <value>
                <fullName>Hospice</fullName>
            </value>
            <value>
                <fullName>Hospital (selected/highlighted)</fullName>
            </value>
            <value>
                <fullName>Independent Community</fullName>
            </value>
            <value>
                <fullName>Internet</fullName>
            </value>
            <value>
                <fullName>Legal Office</fullName>
            </value>
            <value>
                <fullName>Medical/Surgical Center</fullName>
            </value>
            <value>
                <fullName>Oasis Senior Advisors</fullName>
            </value>
            <value>
                <fullName>Physician</fullName>
            </value>
            <value>
                <fullName>Place of Worship</fullName>
            </value>
            <value>
                <fullName>Private Duty Nurse</fullName>
            </value>
            <value>
                <fullName>Real Estate</fullName>
            </value>
            <value>
                <fullName>Rehab/Nursing Home</fullName>
            </value>
            <value>
                <fullName>Senior Advisors</fullName>
            </value>
            <value>
                <fullName>Veterans Affairs</fullName>
            </value>
            <value>
                <fullName>WOM</fullName>
            </value>
            <value>
                <fullName>WOM - Current/Past Client</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>