force-app/main/default/objects/Account/fields/Urgency_of_Need__c.field-meta.xml
<CustomField>
    <fullName>Urgency_of_Need__c</fullName>
    <label>Urgency of Need</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Urgency_of_Need</valueSetName>
    </valueSet>
</CustomField>