force-app/main/default/objects/Account/fields/Where_is_the_client_now__c.field-meta.xml
<CustomField>
    <fullName>Where_is_the_client_now__c</fullName>
    <label>Where is the client now?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Where_is_the_client_now</valueSetName>
    </valueSet>
</CustomField>