force-app/main/default/objects/Account/fields/WhereDoesTheClientLive__c.field-meta.xml
<CustomField>
    <fullName>WhereDoesTheClientLive__c</fullName>
    <label>Where does the client live?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Apartment/home</fullName>
            </value>
            <value>
                <fullName>Senior Living</fullName>
            </value>
            <value>
                <fullName>Skilled Nursing Facility</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>